--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>React App</title>
 
     <style>
- 
+      body{
+         font-family: 'Roboto',sans-serif;
+       }
     </style>
   </head>
   <body>
@@ -43,5 +45,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <div class="modal-container"></div>
   </body>
 </html>
