--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,13 @@
     <style>
       body{
          font-family: 'Roboto',sans-serif;
-       }
+         width: 100%;
+         max-width: 1500px;
+         margin: 0 auto;
+         padding: 0 20px;
+         
+      }
+
     </style>
   </head>
   <body>
