started final bill

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,20 @@
     <title>React App</title>
 
     <style>
-      body{
-         font-family: 'Roboto',sans-serif;
-         width: 100%;
-         max-width: 1500px;
-         margin: 0 auto;
-         padding: 0 20px;
-         
-      }
+   body {
+   font-family: 'Roboto',sans-serif;
+ 
+}
+
+
+@media only screen and (min-width: 1600px) {
+  body {
+    max-width: 1200px;  
+    margin: 0 auto;      
+    padding: 0 20px;     
+    
+  }
+}
 
     </style>
   </head>
