--- a/public/index.html
+++ b/public/index.html
@@ -59,5 +59,6 @@
     -->
 
     <div class="modal-container"></div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
